# latent-to-pixel-decoder

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  ROADMAP.md  brain.md  environment.yml  pyproject.toml
demo/: app.py
docs/: dataset_card.md  datasets.md  experiments.md  method.md  model_card.md  open_source_release.md  reproducibility.md  step2_synthetic_data.md  step3_category_steering.md
logs/: catprobe_15668643.out  catprobe_15680785.err  catprobe_15680785.out  catprobe_15764874.out  catsteer_15765062.err  catsteer_15765124.out  catsteer_15765291.out  catsteer_15765403.out  catsteer_15765605.out  eval_15584902.err  eval_15584902.out  eval_15585944.out  eval_15586034.out  extract_15524421.err  extract_15524452.err  extract_15524480.err  extract_15524622.err  extract_15524693.err  extract_15524693.out  extract_15585120.err  extract_15585120.out  extract_15764861.err  extract_syn_15682702.err  extract_syn_15682702.out  extract_syn_15682703.err  extract_syn_15682703.out  gs_install_15682359.out  train_15525025.err  train_15525025.out  train_15525129.err  train_15525333.err  train_15525333.out  train_15525410.err  train_15525410.out  train_15525685.err  train_15525685.out  train_15526167.err  train_15526167.out  train_15575056.err  train_15575056.out  (+13 more)
notebooks/: 01_dataset_preview.ipynb  02_latent_exploration.ipynb  03_decoder_results.ipynb  04_physics_manifold_analysis.ipynb  05_latent_interventions.ipynb
scripts/: _bootstrap.py  _disentangle.sh  _encode_nuisance.sh  _fit_command.sh  _fit_dir_operator.sh  _fit_transport.sh  _pick_partition.sh  _steer_scene_fp.sh  _steer_v2d.sh  _subspace_v2d.sh  _train_scene_fp.sh  _train_v2d_fp.sh  _validate_scene_data.py  analyze_latents.py  calibrate_cmd_gain.py  calibrate_restitution_gain.py  collect_step2_results.py  disentangle_nuisance.py  download_data.py  eval_decoder.py  extract_latents.py  fit_command_operators.py  fit_dir_operator.py  fit_restitution_command.py  fit_transport_operator.py  probe_categories.py  probe_equivariance.py  probe_occlusion.py  relabel_cache_categories.py  restitution_subspace.py  run_full_pipeline.py  slurm_collect_step2.sh  slurm_eval_decoder.sh  slurm_extract_scene.sh  slurm_extract_synthetic.sh  slurm_extract_v2d.sh  slurm_probe_occlusion.sh  (+17 more)
(+115 files in other folders)
